--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,7 @@
 </head>
 <body>
 <div id="map"></div>
-<script>
-    var map;
-    function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: -34.397, lng: 150.644},
-            zoom: 8
-        });
-    }
-</script>
+<script src="bicycle.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8drIp4jnDhfKKC9oaBmqTfC1UFYkW4_4&callback=initMap" async defer></script>
 </body>
 </html>
