Added load more functionality

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,18 @@
     <div class="window map">
         <div id="map"></div>
         <div id="bikelist">
-            <div class="title">Nearby Stations</div>
+            <table>
+                <tr height="1px">
+                    <td><div class="title">Nearby Stations</div></td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="stationswrapper">
+                            <div class="stationopt loadmore">Load more...</div>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
