Added loading gif

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
                 </tr>
                 <tr>
                     <td>
+                        <div class="loading"><img src="loading.gif"></div>
                         <div class="stationswrapper">
                             <div class="stationopt loadmore">Load more...</div>
                         </div>
